# Graphics

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
Engine/: CMakeLists.txt  Graphics.hpp  pch.hpp
Engine/dependencies/glad/: CMakeLists.txt
Engine/dependencies/glad/include/glad/: glad.h
Engine/dependencies/glad/src/: glad.c
Engine/include/: Application.hpp  Circle2D.hpp  Clock.hpp  Color.hpp  ElementBuffer.hpp  Layer.hpp  LayerStack.hpp  Line.hpp  Log.hpp  Math.hpp  Matrix.hpp  OrthographicCamera.hpp  PrimitiveType.hpp  Rect.hpp  Rectangle2D.hpp  Renderer.hpp  ShaderProgram.hpp  Shape.hpp  TextRenderer.hpp  Texture.hpp  Transformable.hpp  Vector.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp
Engine/include/Core/: Application.hpp  Clock.hpp  Color.hpp  Core.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  Math.hpp  Matrix.hpp  PrimitiveType.hpp  RandomGenerator.hpp  Rect.hpp  Vector.hpp  Vertex.hpp  Window.hpp  WorkerThread.hpp  glCheck.hpp
Engine/include/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/include/Input/: Input.hpp  KeyCodes.hpp  MouseButtonCodes.hpp  MouseCodes.hpp
Engine/include/Physics/: Collision.hpp  Constraint.hpp  RigidBody.hpp  Solver.hpp  Utility.hpp  VerletObject.hpp  World.hpp
Engine/include/Platform/: WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.hpp
Engine/include/Platform/Windows/: WindowsInput.hpp  WindowsWindow.hpp
Engine/include/Renderer/: Circle2D.hpp  ElementBuffer.hpp  Line.hpp  OrthographicCamera.hpp  Rectangle2D.hpp  Renderer2D.hpp  ShaderProgram.hpp  Shape.hpp  TextRenderer.hpp  Texture.hpp  Transformable.hpp  VertexArray.hpp  VertexBuffer.hpp
Engine/include/Utility/: Log.hpp  Math.hpp  glCheck.hpp
Engine/src/: Application.cpp  Camera.cpp  Circle2D.cpp  Clock.cpp  Color.cpp  ElementBuffer.cpp  FileSystem.cpp  Layer.cpp  LayerStack.cpp  Line.cpp  Log.cpp  Math.cpp  OrthographicCamera.cpp  Rectangle2D.cpp  Renderer.cpp  ShaderProgram.cpp  Shape.cpp  TextRenderer.cpp  Texture.cpp  Transformable.cpp  VertexArray.cpp  VertexBuffer.cpp  glCheck.cpp
Engine/src/Core/: Application.cpp  Clock.cpp  Color.cpp  FileSystem.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Math.cpp  WorkerThread.cpp  WorkerThread.hpp  glCheck.cpp
Engine/src/Platform/: WindowsInput.cpp  WindowsWindow.cpp
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Engine/src/Renderer/: Circle2D.cpp  ElementBuffer.cpp  Line.cpp  OrthographicCamera.cpp  Rectangle2D.cpp  Renderer2D.cpp  ShaderProgram.cpp  Shape.cpp  TextRenderer.cpp  Texture.cpp  Transformable.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/src/Utility/: Clock.cpp  Log.cpp
Sandbox/: CMakeLists.txt  PhysicsDemo.cpp  main.cpp
configuration/: root_directory.h
demo/: console.cpp  main.cpp
demo/mario/: main.cpp
dependencies/freetype/: freetype.lib
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: Camera.hpp  Camera2D.hpp  Circle2D.hpp  Clock.hpp  Color.hpp  Drawable.hpp  ElementBuffer.hpp  FileSystem.hpp  Graphics.hpp  Line.hpp  Math.hpp  Matrix.hpp  Rect.hpp  Rectangle2D.hpp  Renderer.hpp  ShaderProgram.hpp  Shape.hpp  TextRenderer.hpp  Texture.hpp  Transformable.hpp  Utility.hpp  Vector.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp  glCheck.hpp  pch.hpp
shader/: TextVertexShader.glsl  shader.frag
shader/2D/: FragmentShader.frag  FragmentShader.glsl  VertexShader.glsl  VertexShader.vert
src/: Camera.cpp  Camera2D.cpp  Circle2D.cpp  Clock.cpp  Color.cpp  ElementBuffer.cpp  FileSystem.cpp  Line.cpp  Math.cpp  Rectangle2D.cpp  Renderer.cpp  ShaderProgram.cpp  Shape.cpp  TextRenderer.cpp  Texture.cpp  Transformable.cpp  Utility.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  glCheck.cpp
tests/: CMakeLists.txt  MatrixTests.cpp  VectorTests.cpp
